--- a/index.html
+++ b/index.html
@@ -80,82 +80,93 @@ font-size:22px;font-weight:bold;cursor:pointer;background:transparent
 
 <script>
 
-/* ================= ESTADO ================= */
-
-let state={
-usuarioTipo:null,
-usuarioNome:null,
-modo:null,
-mes:new Date().getMonth(),
-ano:new Date().getFullYear()
-}
-
+let state={usuarioTipo:null,usuarioNome:null,modo:null,mes:new Date().getMonth(),ano:new Date().getFullYear()}
 let recepcionistas=JSON.parse(localStorage.getItem("recepcionistas")||"[]");
 let agendamentos=JSON.parse(localStorage.getItem("agendamentos")||"[]");
 let bloqueios=JSON.parse(localStorage.getItem("bloqueios")||"[]");
 
 document.getElementById("anoAtual").innerText=new Date().getFullYear();
 
-/* ================= LOGIN ================= */
+/* LOGIN */
 
 function loginAdmin(){
-let senha=prompt("Senha Admin:");
-if(senha==="696907"){
-state.usuarioTipo="admin";
-state.usuarioNome="ADMIN";
-entrar();
+if(prompt("Senha Admin:")==="696907"){
+state.usuarioTipo="admin";state.usuarioNome="ADMIN";entrar();}
 }
-}
-
 function loginRecepcao(){
 let nome=prompt("Nome:");
 let senha=prompt("Senha:");
-let user=recepcionistas.find(r=>r.nome===nome&&r.senha===senha);
-if(user){
-state.usuarioTipo="recepcao";
-state.usuarioNome=nome;
-entrar();
-}else alert("Login inválido");
+let u=recepcionistas.find(r=>r.nome===nome&&r.senha===senha);
+if(u){state.usuarioTipo="recepcao";state.usuarioNome=nome;entrar();}
+else alert("Login inválido");
 }
-
-function loginProfessor(){
-state.usuarioTipo="professor";
-state.usuarioNome="PROFESSOR";
-entrar();
-}
-
+function loginProfessor(){state.usuarioTipo="professor";state.usuarioNome="PROFESSOR";entrar();}
 function logout(){location.reload();}
 
 function entrar(){
 document.getElementById("loginScreen").classList.add("hidden");
 document.getElementById("app").classList.remove("hidden");
 document.getElementById("usuarioLabel").innerText=state.usuarioNome;
-renderMenu();
-renderCalendario();
+renderMenu();renderCalendario();
 }
 
-/* ================= MENU ================= */
+/* MENU */
 
 function renderMenu(){
-let m=document.getElementById("menu");
-m.innerHTML="";
+let m=document.getElementById("menu");m.innerHTML="";
 m.innerHTML+=`<button onclick="state.modo=null;renderCalendario()">📆 Calendário</button>`;
-
 if(state.usuarioTipo!=="professor"){
 m.innerHTML+=`<button onclick="state.modo='agendar';renderCalendario()">➕ Agendar</button>`;
 m.innerHTML+=`<button onclick="state.modo='bloqDia';renderCalendario()">🚫 Bloquear Dia</button>`;
 m.innerHTML+=`<button onclick="state.modo='bloqHora';renderCalendario()">⛔ Bloquear Horário</button>`;
 }
+if(state.usuarioTipo==="admin"){
+m.innerHTML+=`<button onclick="abrirCadastroRecep()">👥 Recepcionistas</button>`;
+}
 }
 
-/* ================= CALENDÁRIO ================= */
+/* CADASTRO RECEPCIONISTA */
+
+function abrirCadastroRecep(){
+let main=document.getElementById("main");
+main.innerHTML=`<h2>Recepcionistas</h2>
+<input id="novoNome" placeholder="Nome único">
+<input id="novaSenha" placeholder="Senha">
+<button onclick="cadastrarRecep()">Cadastrar</button>
+<button onclick="renderCalendario()">⬅ Voltar</button>
+<div id="listaRecep"></div>`;
+renderListaRecep();
+}
+
+function renderListaRecep(){
+let div=document.getElementById("listaRecep");div.innerHTML="";
+recepcionistas.forEach((r,i)=>{
+div.innerHTML+=`<div class="card"><b>${r.nome}</b><br>Senha: ${r.senha}
+<button onclick="excluirRecep(${i})">Excluir</button></div>`;
+});
+}
+
+function cadastrarRecep(){
+let nome=document.getElementById("novoNome").value.trim();
+let senha=document.getElementById("novaSenha").value.trim();
+if(!nome||!senha)return alert("Preencha nome e senha");
+if(recepcionistas.find(r=>r.nome===nome))return alert("Nome já existe");
+recepcionistas.push({nome,senha});
+localStorage.setItem("recepcionistas",JSON.stringify(recepcionistas));
+renderListaRecep();
+}
+
+function excluirRecep(i){
+recepcionistas.splice(i,1);
+localStorage.setItem("recepcionistas",JSON.stringify(recepcionistas));
+renderListaRecep();
+}
+
+/* CALENDÁRIO */
 
 function renderCalendario(){
-
 let main=document.getElementById("main");
-
-main.innerHTML=`
-<div class="calendario-header">
+main.innerHTML=`<div class="calendario-header">
 <button onclick="state.mes--;if(state.mes<0){state.mes=11;state.ano--;}renderCalendario()">◀</button>
 <h2>${nomeMes(state.mes)} ${state.ano}</h2>
 <button onclick="state.mes++;if(state.mes>11){state.mes=0;state.ano++;}renderCalendario()">▶</button>
@@ -163,98 +174,73 @@ main.innerHTML=`
 <div class="calendario-grid" style="font-weight:bold">
 <div>DOM</div><div>SEG</div><div>TER</div><div>QUA</div><div>QUI</div><div>SEX</div><div>SAB</div>
 </div>
-<div class="calendario-grid" id="grid"></div>
-`;
-
+<div class="calendario-grid" id="grid"></div>`;
 let primeiroDia=new Date(state.ano,state.mes,1).getDay();
 let totalDias=new Date(state.ano,state.mes+1,0).getDate();
 let grid=document.getElementById("grid");
-
 for(let i=0;i<primeiroDia;i++)grid.appendChild(document.createElement("div"));
-
 for(let d=1;d<=totalDias;d++){
-
 let data=formatarISO(state.ano,state.mes,d);
 let diaSemana=new Date(data).getDay();
 let div=document.createElement("div");
 div.className="dia";
-
-if(diaSemana>=1 && diaSemana<=4){
+if(diaSemana>=1&&diaSemana<=4){
 div.classList.add("liberado");
 div.onclick=()=>clicarDia(data);
-}else{
-div.classList.add("inativo");
-}
-
-if(bloqueios.find(b=>b.data===data && b.tipo==="dia")){
+}else div.classList.add("inativo");
+if(bloqueios.find(b=>b.data===data&&b.tipo==="dia"))
 div.classList.add("bloqueado");
-}
-
 div.innerText=d;
 grid.appendChild(div);
 }
 }
 
-/* ================= DIA ================= */
+/* DIA */
 
 const horarios=["06:30","06:50","07:50","08:10","08:30","08:50","09:10","09:30","16:00","16:20","16:40","17:00","17:20","17:40","18:00","18:20","18:40","19:20","19:40","21:00","21:20"];
 
 function clicarDia(data){
 
-let bloqueadoDia=bloqueios.find(b=>b.data===data && b.tipo==="dia");
+let bloqueadoDia=bloqueios.find(b=>b.data===data&&b.tipo==="dia");
 
 if(state.modo==="bloqDia"){
-if(!bloqueadoDia){
-bloqueios.push({data,tipo:"dia"});
-salvar();
-}
-renderCalendario();
-return;
+if(!bloqueadoDia)bloqueios.push({data,tipo:"dia"});
+salvar();renderCalendario();return;
 }
 
 if(bloqueadoDia && state.usuarioTipo!=="admin"){
-alert("Dia bloqueado");
-return;
+alert("Dia bloqueado");return;
 }
 
 let main=document.getElementById("main");
-
 main.innerHTML=`<h2>${data}</h2>
 <button onclick="renderCalendario()">⬅ Voltar</button>
-<div id="horarios"></div>
-<div id="lista"></div>
-`;
+<div id="horarios" class="grid-horarios"></div>
+<div id="lista"></div>`;
 
-if(bloqueadoDia && state.usuarioTipo==="admin"){
+if(bloqueadoDia&&state.usuarioTipo==="admin")
 main.innerHTML+=`<button onclick="desbloquearDia('${data}')">🔓 Desbloquear Dia</button>`;
-}
 
 let grid=document.getElementById("horarios");
-grid.className="grid-horarios";
 
 horarios.forEach(h=>{
-
 let btn=document.createElement("button");
 btn.className="horario-btn";
 btn.innerText=h;
-
-let ocupado=agendamentos.find(a=>a.data===data && a.horario===h);
-let bloqueado=bloqueios.find(b=>b.data===data && b.horario===h);
+let ocupado=agendamentos.find(a=>a.data===data&&a.horario===h);
+let bloqueado=bloqueios.find(b=>b.data===data&&b.horario===h);
 
 if(ocupado){btn.classList.add("ocupado");btn.disabled=true;}
 if(bloqueado){btn.classList.add("bloqueado");}
 
-if(state.modo==="agendar" && !ocupado && !bloqueado){
+if(state.modo==="agendar"&&!ocupado&&!bloqueado)
 btn.onclick=()=>agendar(data,h);
-}
 
-if(state.modo==="bloqHora" && !ocupado && !bloqueado){
-btn.onclick=()=>{bloqueios.push({data,horario:h,tipo:"hora"});salvar();clicarDia(data);}
-}
+if(state.modo==="bloqHora"&&!ocupado&&!bloqueado)
+btn.onclick=()=>{bloqueios.push({data,horario:h,tipo:"hora"});salvar();clicarDia(data);};
 
-if(bloqueado && state.usuarioTipo==="admin"){
+if(bloqueado&&state.usuarioTipo==="admin")
 btn.onclick=()=>desbloquearHora(data,h);
-}
 
 grid.appendChild(btn);
 });
@@ -262,42 +248,43 @@ grid.appendChild(btn);
 mostrarLista(data);
 }
 
-/* ================= AGENDAR ================= */
+/* AGENDAMENTO */
 
 function agendar(data,horario){
 let nome=prompt("Nome do aluno:");
 let id=prompt("ID numérico até 10 dígitos:");
-if(!/^[0-9]{1,10}$/.test(id)){alert("ID inválido");return;}
+if(!/^[0-9]{1,10}$/.test(id))return alert("ID inválido");
 let existe=agendamentos.find(a=>a.id===id);
-if(existe && existe.nome!==nome){alert("ID já vinculado a outro nome");return;}
+if(existe&&existe.nome!==nome)return alert("ID já vinculado a outro nome");
 agendamentos.push({nome,id,data,horario,status:"pendente",criadoPor:state.usuarioNome});
-salvar();
-clicarDia(data);
+salvar();clicarDia(data);
 }
 
-/* ================= LISTA ================= */
+/* LISTA */
 
 function mostrarLista(data){
-let lista=agendamentos.filter(a=>a.data===data)
+let lista=agendamentos
+.map((a,i)=>({...a,idx:i}))
+.filter(a=>a.data===data)
 .sort((a,b)=>a.horario.localeCompare(b.horario));
 let div=document.getElementById("lista");
 div.innerHTML="<h3>Agendamentos:</h3>";
-lista.forEach((a,i)=>{
+lista.forEach(a=>{
 div.innerHTML+=`
 <div class="card">
 <b>${a.horario}</b> - ${a.nome} (ID:${a.id})<br>
 <span class="status ${a.status}">${a.status}</span><br>
 ${state.usuarioTipo!=="professor"?
-`<button onclick="mensagem(${i})">Mensagem enviada</button>
-<button onclick="confirmar(${i})">Presença confirmada</button>
-<button onclick="cancelar(${i})">Cancelar</button>`:
-`<button onclick="realizado(${i})">Avaliação realizada</button>
-<button onclick="faltou(${i})">Faltou</button>`}
+`<button onclick="mensagem(${a.idx})">Mensagem enviada</button>
+<button onclick="confirmar(${a.idx})">Presença confirmada</button>
+<button onclick="cancelar(${a.idx})">Cancelar</button>`:
+`<button onclick="realizado(${a.idx})">Avaliação realizada</button>
+<button onclick="faltou(${a.idx})">Faltou</button>`}
 </div>`;
 });
 }
 
-/* ================= STATUS ================= */
+/* STATUS */
 
 function mensagem(i){agendamentos[i].status="mensagem";salvar();renderCalendario();}
 function confirmar(i){agendamentos[i].status="confirmado";salvar();renderCalendario();}
@@ -309,18 +296,18 @@ agendamentos.splice(i,1);salvar();renderCalendario();
 }else alert("Somente quem agendou ou admin pode cancelar.");
 }
 
-/* ================= BLOQUEIO ================= */
+/* BLOQUEIO */
 
 function desbloquearDia(data){
-bloqueios=bloqueios.filter(b=>!(b.data===data && b.tipo==="dia"));
+bloqueios=bloqueios.filter(b=>!(b.data===data&&b.tipo==="dia"));
 salvar();renderCalendario();
 }
 function desbloquearHora(data,h){
-bloqueios=bloqueios.filter(b=>!(b.data===data && b.horario===h));
+bloqueios=bloqueios.filter(b=>!(b.data===data&&b.horario===h));
 salvar();clicarDia(data);
 }
 
-/* ================= UTIL ================= */
+/* UTIL */
 
 function salvar(){
 localStorage.setItem("agendamentos",JSON.stringify(agendamentos));
@@ -329,7 +316,9 @@ localStorage.setItem("bloqueios",JSON.stringify(bloqueios));
 function formatarISO(ano,mes,dia){
 return ano+"-"+String(mes+1).padStart(2,"0")+"-"+String(dia).padStart(2,"0");
 }
-function nomeMes(m){return["Janeiro","Fevereiro","Março","Abril","Maio","Junho","Julho","Agosto","Setembro","Outubro","Novembro","Dezembro"][m];}
+function nomeMes(m){
+return["Janeiro","Fevereiro","Março","Abril","Maio","Junho","Julho","Agosto","Setembro","Outubro","Novembro","Dezembro"][m];
+}
 
 </script>
 </body>
