--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@ font-size:22px;font-weight:bold;cursor:pointer;background:transparent
 
 .card{background:white;padding:12px;margin-bottom:10px;border-radius:8px;box-shadow:0 2px 4px rgba(0,0,0,0.2)}
 
-.calendario-header{display:flex;justify-content:space-between;align-items:center}
 .calendario-grid{display:grid;grid-template-columns:repeat(7,1fr);gap:5px;margin-top:10px}
 .dia{padding:10px;text-align:center;border:1px solid #ccc;cursor:pointer}
 .dia.liberado{background:#e6f4ea}
@@ -58,9 +57,9 @@ font-size:22px;font-weight:bold;cursor:pointer;background:transparent
 <h3>VILA IMPÉRIO - <span id="anoAtual"></span></h3>
 </div>
 <div class="login-container">
-<div class="login-box" onclick="loginAdmin()">ADMIN</div>
-<div class="login-box" onclick="loginRecepcao()">RECEPÇÃO</div>
-<div class="login-box" onclick="loginProfessor()">PROFESSOR</div>
+<div class="login-box" onclick="login('admin')">ADMIN</div>
+<div class="login-box" onclick="login('recepcao')">RECEPÇÃO</div>
+<div class="login-box" onclick="login('professor')">PROFESSOR</div>
 </div>
 </div>
 
@@ -80,88 +79,274 @@ font-size:22px;font-weight:bold;cursor:pointer;background:transparent
 
 <script>
 
-let state={usuarioTipo:null,usuarioNome:null,modo:null,mes:new Date().getMonth(),ano:new Date().getFullYear(),dataAtual:null}
-let recepcionistas=JSON.parse(localStorage.getItem("recepcionistas")||"[]");
+/* ================= ESTADO ================= */
+
+let state={
+tipo:null,
+nome:null,
+modo:null,
+mes:new Date().getMonth(),
+ano:new Date().getFullYear(),
+dataSelecionada:null
+}
+
 let agendamentos=JSON.parse(localStorage.getItem("agendamentos")||"[]");
 let bloqueios=JSON.parse(localStorage.getItem("bloqueios")||"[]");
 
 document.getElementById("anoAtual").innerText=new Date().getFullYear();
 
-/* LOGIN */
+/* ================= LOGIN ================= */
 
-function loginAdmin(){
-if(prompt("Senha Admin:")==="696907"){
-state.usuarioTipo="admin";state.usuarioNome="ADMIN";entrar();}
+function login(tipo){
+
+if(tipo==="admin"){
+if(prompt("Senha Admin:")!=="696907") return;
+state.tipo="admin";
+state.nome="ADMIN";
 }
-function loginRecepcao(){
+
+if(tipo==="recepcao"){
 let nome=prompt("Nome:");
-let senha=prompt("Senha:");
-let u=recepcionistas.find(r=>r.nome===nome&&r.senha===senha);
-if(u){state.usuarioTipo="recepcao";state.usuarioNome=nome;entrar();}
-else alert("Login inválido");
+if(!nome) return;
+state.tipo="recepcao";
+state.nome=nome;
 }
-function loginProfessor(){state.usuarioTipo="professor";state.usuarioNome="PROFESSOR";entrar();}
-function logout(){location.reload();}
 
-function entrar(){
+if(tipo==="professor"){
+state.tipo="professor";
+state.nome="PROFESSOR";
+}
+
 document.getElementById("loginScreen").classList.add("hidden");
 document.getElementById("app").classList.remove("hidden");
-document.getElementById("usuarioLabel").innerText=state.usuarioNome;
-renderMenu();renderCalendario();
+document.getElementById("usuarioLabel").innerText=state.nome;
+
+renderMenu();
+renderCalendario();
 }
 
-/* MENU */
+function logout(){location.reload();}
+
+/* ================= MENU ================= */
 
 function renderMenu(){
-let m=document.getElementById("menu");m.innerHTML="";
+let m=document.getElementById("menu");
+m.innerHTML="";
+
 m.innerHTML+=`<button onclick="state.modo=null;renderCalendario()">📆 Calendário</button>`;
-if(state.usuarioTipo!=="professor"){
+
+if(state.tipo!=="professor"){
 m.innerHTML+=`<button onclick="state.modo='agendar';renderCalendario()">➕ Agendar</button>`;
 m.innerHTML+=`<button onclick="state.modo='bloqDia';renderCalendario()">🚫 Bloquear Dia</button>`;
 m.innerHTML+=`<button onclick="state.modo='bloqHora';renderCalendario()">⛔ Bloquear Horário</button>`;
 }
 }
 
-/* CALENDÁRIO */
+/* ================= CALENDÁRIO ================= */
 
 function renderCalendario(){
+
 let main=document.getElementById("main");
-main.innerHTML=`<div class="calendario-header">
-<button onclick="state.mes--;if(state.mes<0){state.mes=11;state.ano--;}renderCalendario()">◀</button>
+
+main.innerHTML=`
 <h2>${nomeMes(state.mes)} ${state.ano}</h2>
-<button onclick="state.mes++;if(state.mes>11){state.mes=0;state.ano++;}renderCalendario()">▶</button>
-</div>
-<div class="calendario-grid" style="font-weight:bold">
+<div class="calendario-grid">
 <div>DOM</div><div>SEG</div><div>TER</div><div>QUA</div><div>QUI</div><div>SEX</div><div>SAB</div>
 </div>
-<div class="calendario-grid" id="grid"></div>`;
+<div class="calendario-grid" id="grid"></div>
+`;
 
 let primeiroDia=new Date(state.ano,state.mes,1).getDay();
 let totalDias=new Date(state.ano,state.mes+1,0).getDate();
 let grid=document.getElementById("grid");
 
-for(let i=0;i<primeiroDia;i++)grid.appendChild(document.createElement("div"));
+for(let i=0;i<primeiroDia;i++) grid.appendChild(document.createElement("div"));
 
 for(let d=1;d<=totalDias;d++){
+
 let data=formatarISO(state.ano,state.mes,d);
 let diaSemana=new Date(data).getDay();
+
 let div=document.createElement("div");
 div.className="dia";
 
-if(diaSemana>=1&&diaSemana<=4){
+if(diaSemana>=1 && diaSemana<=4){
 div.classList.add("liberado");
-div.onclick=()=>clicarDia(data);
-}else div.classList.add("inativo");
+div.onclick=()=>abrirDia(data);
+}else{
+div.classList.add("inativo");
+}
 
-if(bloqueios.find(b=>b.data===data&&b.tipo==="dia"))
+if(bloqueios.find(b=>b.data===data && b.tipo==="dia")){
 div.classList.add("bloqueado");
+}
 
 div.innerText=d;
 grid.appendChild(div);
 }
 }
 
-/* RESTANTE DO SISTEMA MANTIDO COMO ESTAVA */
+/* ================= DIA ================= */
+
+const horarios=["06:30","06:50","07:50","08:10","08:30","08:50","09:10","09:30","16:00","16:20","16:40","17:00","17:20","17:40","18:00","18:20","18:40","19:20","19:40","21:00","21:20"];
+
+function abrirDia(data){
+
+state.dataSelecionada=data;
+
+let bloqueadoDia=bloqueios.find(b=>b.data===data && b.tipo==="dia");
+
+if(state.modo==="bloqDia"){
+if(!bloqueadoDia){
+bloqueios.push({data,tipo:"dia"});
+}else if(state.tipo==="admin"){
+bloqueios=bloqueios.filter(b=>!(b.data===data && b.tipo==="dia"));
+}
+salvar();
+renderCalendario();
+return;
+}
+
+if(bloqueadoDia && state.tipo!=="admin"){
+alert("Dia bloqueado");
+return;
+}
+
+let main=document.getElementById("main");
+main.innerHTML=`<h2>${data}</h2>
+<button onclick="renderCalendario()">⬅ Voltar</button>
+<div class="grid-horarios" id="horarios"></div>
+<div id="lista"></div>`;
+
+let grid=document.getElementById("horarios");
+
+horarios.forEach(h=>{
+
+let btn=document.createElement("button");
+btn.className="horario-btn";
+btn.innerText=h;
+
+let ocupado=agendamentos.find(a=>a.data===data && a.horario===h);
+let bloqueado=bloqueios.find(b=>b.data===data && b.horario===h);
+
+if(ocupado){
+btn.classList.add("ocupado");
+btn.disabled=true;
+}
+
+if(bloqueado){
+btn.classList.add("bloqueado");
+if(state.tipo==="admin"){
+btn.onclick=()=>desbloquearHorario(data,h);
+}
+}else{
+
+if(state.modo==="agendar" && !ocupado){
+btn.onclick=()=>agendar(data,h);
+}
+
+if(state.modo==="bloqHora" && !ocupado){
+btn.onclick=()=>{
+bloqueios.push({data,horario:h,tipo:"hora"});
+salvar();
+abrirDia(data);
+}
+}
+}
+
+grid.appendChild(btn);
+});
+
+mostrarLista(data);
+}
+
+/* ================= AGENDAR ================= */
+
+function agendar(data,horario){
+
+let nome=prompt("Nome do aluno:");
+let id=prompt("ID numérico até 10 dígitos:");
+
+if(!/^[0-9]{1,10}$/.test(id)) return alert("ID inválido");
+
+let existe=agendamentos.find(a=>a.id===id);
+if(existe && existe.nome!==nome) return alert("ID já vinculado a outro nome");
+
+agendamentos.push({
+nome,id,data,horario,status:"pendente",criadoPor:state.nome
+});
+
+salvar();
+abrirDia(data);
+}
+
+/* ================= LISTA ================= */
+
+function mostrarLista(data){
+
+let lista=agendamentos
+.map((a,i)=>({...a,idx:i}))
+.filter(a=>a.data===data)
+.sort((a,b)=>a.horario.localeCompare(b.horario));
+
+let div=document.getElementById("lista");
+div.innerHTML="<h3>Agendamentos:</h3>";
+
+lista.forEach(a=>{
+div.innerHTML+=`
+<div class="card">
+<b>${a.horario}</b> - ${a.nome} (ID:${a.id})<br>
+<span class="status ${a.status}">${a.status}</span><br>
+${state.tipo!=="professor"?
+`<button onclick="mensagem(${a.idx})">Mensagem enviada</button>
+<button onclick="confirmar(${a.idx})">Presença confirmada</button>
+<button onclick="cancelar(${a.idx})">Cancelar</button>`
+:
+`<button onclick="realizado(${a.idx})">Avaliação realizada</button>
+<button onclick="faltou(${a.idx})">Faltou</button>`}
+</div>`;
+});
+}
+
+/* ================= STATUS ================= */
+
+function mensagem(i){agendamentos[i].status="mensagem";salvar();mostrarLista(state.dataSelecionada);}
+function confirmar(i){agendamentos[i].status="confirmado";salvar();mostrarLista(state.dataSelecionada);}
+function realizado(i){agendamentos[i].status="realizado";salvar();mostrarLista(state.dataSelecionada);}
+function faltou(i){agendamentos[i].status="faltou";salvar();mostrarLista(state.dataSelecionada);}
+
+function cancelar(i){
+if(state.tipo==="admin" || agendamentos[i].criadoPor===state.nome){
+agendamentos.splice(i,1);
+salvar();
+mostrarLista(state.dataSelecionada);
+}else{
+alert("Somente quem agendou ou admin pode cancelar.");
+}
+}
+
+/* ================= DESBLOQUEAR ================= */
+
+function desbloquearHorario(data,h){
+bloqueios=bloqueios.filter(b=>!(b.data===data && b.horario===h));
+salvar();
+abrirDia(data);
+}
+
+/* ================= UTIL ================= */
+
+function salvar(){
+localStorage.setItem("agendamentos",JSON.stringify(agendamentos));
+localStorage.setItem("bloqueios",JSON.stringify(bloqueios));
+}
+
+function formatarISO(a,m,d){
+return a+"-"+String(m+1).padStart(2,"0")+"-"+String(d).padStart(2,"0");
+}
+
+function nomeMes(m){
+return["Janeiro","Fevereiro","Março","Abril","Maio","Junho","Julho","Agosto","Setembro","Outubro","Novembro","Dezembro"][m];
+}
 
 </script>
 </body>
